--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-image: url('/images/header-background.jpg');
+    position: relative;
+    height: 800px;
+    min-height: 500px;
+    width: 100%;
+    background-size: cover !important;
+    -webkit-background-size: cover !important;
+    overflow: hidden;
 }
 
 a {
